Fix horizontal scroll bar

--- a/css/style.css
+++ b/css/style.css
@@ -650,3 +650,7 @@ header {
 li {
     color: #959094
 }
+
+html {
+    overflow-x: hidden;
+}
